objects/Sales_Coach_Stage__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Buyer_Stage__c</fullName>
        <label>Stage Description</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Stage_Color__c</fullName>
        <label>Stage Color</label>
        <length>7</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Sales Coach Stage</label><nameField>
        <label>Sales Coach Stage Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Sales Coach Stages</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>